# MIOT_sub

./: CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  main.cpp
main/certs/: ca.pem  client.pem  key.pem
